--- a/src/pages/accessible-components.astro
+++ b/src/pages/accessible-components.astro
@@ -12,14 +12,15 @@ import {
   Notification,
   Pagination,
 } from 'accessible-astro-components'
+import TopLayout from '../layouts/TopLayout.astro'
 ---
 
-<DefaultLayout title="Accessible Components">
+<TopLayout title="Accessible Components">
   <section class="my-12">
     <div class="space-content container">
       <h1>Accessible Components</h1>
       <p class="text-2xl">
-        This theme has a lot of extra a11y components provided by the <a
+        This theme has a lot of extra ally components provided by the <a
           href="https://github.com/markteekman/accessible-astro-components#Pagination">Accessible Astro Component</a
         > NPM package to help you build accessible pages faster:
       </p>
@@ -147,4 +148,4 @@ import {
       </div>
     </div>
   </section>
-</DefaultLayout>
+</TopLayout>
