--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,13 +5,13 @@ const currentYear = new Date().getFullYear()
 ---
 
 <footer>
-  <CallToAction />
+  <!-- <CallToAction /> -->
   <section class="py-8">
     <div class="container">
       <p>
-        &copy; {currentYear} - Starter Theme for <a href="https://astro.build/">Astro</a>. Made with ❤️ by <a
-          href="https://github.com/markteekman">Mark Teekman</a
-        >.
+        &copy; {currentYear} - BIGCOR  website made with <a href="https://astro.build/"target="_blank" rel="noopener noreferrer">Astro</a>
+        <br>Website by <a href = "mailto:web@bigcor.ca?subject = Feedback&body = Message"> BIGCOR WebDev</a>
+        <br> Awesome Template by <a href="https://github.com/markteekman"target="_blank" rel="noopener noreferrer">Mark Teekman</a>. with our thanks
       </p>
     </div>
   </section>
