--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,14 +2,16 @@
 import ResponsiveToggle from './ResponsiveToggle.astro'
 import { DarkMode } from 'accessible-astro-components'
 import { Image } from 'astro:assets'
-import logo from '../assets/img/logo.svg'
+import logo from '../assets/img/bigcorlogo.svg'
 ---
 
 <div id="main-navigation" class="is-desktop py-8">
   <div class="container">
     <a href="/" class="flex items-center gap-2 !no-underline">
-      <Image src={logo} alt="Your Logo" width="47" height="37" />
-      <span class="font-bold">Accessible Astro</span>
+      <Image src={logo} alt="Bigcor Logo" width="80" height="80" />
+      <span class="font-bold">
+        <p>BOREALIS Ingenuity Group<br>Corporation</p>
+      </span>
     </a>
     <div class="wrapper">
       <nav class="desktop-menu" aria-label="Main navigation desktop">
