--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Counter from '../components/Counter.astro'
 import ContentMedia from '../components/ContentMedia.astro'
 import NavCards from '../components/NavCards.astro'
 import BreadCrumbBar from '../components/BreadCrumbBar.astro'
-import FeaturedItemBar from "../components/FeaturedItemBar.astro";
+import FeaturedItemBar from '../components/FeaturedItemBar.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import TopLayout from '../layouts/TopLayout.astro'
