--- a/src/pages/email.astro
+++ b/src/pages/email.astro
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 ---
 import DefaultLayout from '../layouts/DefaultLayout.astro'
 import Hero from '../components/Hero.astro'
@@ -7,7 +6,7 @@ import Counter from '../components/Counter.astro'
 import ContentMedia from '../components/ContentMedia.astro'
 import NavCards from '../components/NavCards.astro'
 import BreadCrumbBar from '../components/BreadCrumbBar.astro'
-import FeaturedItemBar from "../components/FeaturedItemBar.astro";
+import FeaturedItemBar from '../components/FeaturedItemBar.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import TopLayout from '../layouts/TopLayout.astro'
@@ -16,22 +15,3 @@ import TopLayout from '../layouts/TopLayout.astro'
 <TopLayout title="Home">
           <FeaturedItemBar />
 </TopLayout>
-=======
----
-import DefaultLayout from '../layouts/DefaultLayout.astro'
-import Hero from '../components/Hero.astro'
-import Feature from '../components/Feature.astro'
-import Counter from '../components/Counter.astro'
-import ContentMedia from '../components/ContentMedia.astro'
-import NavCards from '../components/NavCards.astro'
-import BreadCrumbBar from '../components/BreadCrumbBar.astro'
-import FeaturedItemBar from "../components/FeaturedItemBar.astro";
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-import TopLayout from '../layouts/TopLayout.astro'
----
-
-<TopLayout title="Home">
-          <FeaturedItemBar />
-</TopLayout>
->>>>>>> cb5bb65e846c006d6fe84d0f45ef4a831f7f9de6
