--- a/src/pages/Architect/Outdoor.astro
+++ b/src/pages/Architect/Outdoor.astro
@@ -1,21 +1,8 @@
-<<<<<<< HEAD
 ---
-import ArchitectLayout from "../../layouts/ArchitectLayout.astro";
-
-
+import ArchitectLayout from '../../layouts/ArchitectLayout.astro'
 ---
 
 <ArchitectLayout>
     default content
 </ArchitectLayout>
-=======
----
-import ArchitectLayout from "../../layouts/ArchitectLayout.astro";
 
-
----
-
-<ArchitectLayout>
-    default content
-</ArchitectLayout>
->>>>>>> cb5bb65e846c006d6fe84d0f45ef4a831f7f9de6
