--- a/src/pages/accessible-components.astro
+++ b/src/pages/accessible-components.astro
@@ -15,7 +15,7 @@ import {
 import TopLayout from '../layouts/TopLayout.astro'
 ---
 
-<TopLayout title="Accessible Components">
+<DefaultLayout title="Accessible Components">
   <section class="my-12">
     <div class="space-content container">
       <h1>Accessible Components</h1>
@@ -80,10 +80,10 @@ import TopLayout from '../layouts/TopLayout.astro'
         </div>
         <div class="space-content">
           <h2>Cards</h2>
-          <Card
+          <!-- <Card
             img="https://images.unsplash.com/photo-1636819488524-1f019c4e1c44?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
           />
-        </div>
+        </div> -->
         <div class="space-content">
           <h2>DarkMode Toggle</h2>
           <p>This component can be viewed in the top right corner besides the main navigation.</p>
@@ -148,4 +148,4 @@ import TopLayout from '../layouts/TopLayout.astro'
       </div>
     </div>
   </section>
-</TopLayout>
+</DefaultLayout>
