--- a/src/components/NavCards.astro
+++ b/src/components/NavCards.astro
@@ -15,19 +15,19 @@ import Feature from "./Feature.astro"
         <!-- <Feature icon="mdi:looks" title="Prettier">
           Less worry about formatting your code, let the Astro Prettier integration do the heavy lifting.
         </Feature> -->
-        <Feature icon="mdi:outdoor-temperature" title="OUTDOOR LIVING">
+        <Feature icon="mdi:outdoor-lamp" title="OUTDOOR LIVING">
           Get Ready for Summer!!
         </Feature>
-        <Feature icon="mdi:construction-outline" title="This NavCard is Under Construction">
+        <Feature icon="mdi:apple" title="This NavCard is Under Construction">
           Coming soon 
         </Feature>
-        <Feature icon="mdi:construction-outline" title="This NavCard is Under Construction">
+        <Feature icon="mdi:apple" title="This NavCard is Under Construction">
           Coming soon 
         </Feature>
-        <Feature icon="mdi:construction-outline" title="This NavCard is Under Construction">
+        <Feature icon="mdi:apple" title="This NavCard is Under Construction">
           Coming soon 
         </Feature>
-        <Feature icon="mdi:construction-outline" title="This NavCard is Under Construction">
+        <Feature icon="mdi:apple" title="This NavCard is Under Construction">
           Coming soon 
         <!-- </Feature>
         <Feature icon="mdi:book-open-page-variant" title="Blog">
