--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -9,7 +9,7 @@ const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
   <div class="content">
     <h3>{title}</h3>
     <p>
-      <slot>default content</slot>
+      <slot>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, corporis.</slot>
     </p>
   </div>
 </div>
