--- a/src/pages/accessible-components.astro
+++ b/src/pages/accessible-components.astro
@@ -12,7 +12,6 @@ import {
   Notification,
   Pagination,
 } from 'accessible-astro-components'
-import TopLayout from '../layouts/TopLayout.astro'
 ---
 
 <DefaultLayout title="Accessible Components">
@@ -20,7 +19,7 @@ import TopLayout from '../layouts/TopLayout.astro'
     <div class="space-content container">
       <h1>Accessible Components</h1>
       <p class="text-2xl">
-        This theme has a lot of extra ally components provided by the <a
+        This theme has a lot of extra a11y components provided by the <a
           href="https://github.com/markteekman/accessible-astro-components#Pagination">Accessible Astro Component</a
         > NPM package to help you build accessible pages faster:
       </p>
@@ -80,10 +79,10 @@ import TopLayout from '../layouts/TopLayout.astro'
         </div>
         <div class="space-content">
           <h2>Cards</h2>
-          <!-- <Card
+          <Card
             img="https://images.unsplash.com/photo-1636819488524-1f019c4e1c44?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
           />
-        </div> -->
+        </div>
         <div class="space-content">
           <h2>DarkMode Toggle</h2>
           <p>This component can be viewed in the top right corner besides the main navigation.</p>
