--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -4,11 +4,9 @@
 
 @use 'breakpoint' as *;
 
-
-// changed fonts//
 @font-face {
   font-family: 'Open Sans';
-  src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url('/fonts/HandelGotDBol.woff2') format('woff2'),
+  src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url('/fonts/OpenSans-ExtraBold.woff2') format('woff2'),
     url('/fonts/OpenSans-ExtraBold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
@@ -17,7 +15,7 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('/fonts/HandelGotDBol.woff2') format('woff2'),
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('/fonts/OpenSans-Bold.woff2') format('woff2'),
     url('/fonts/OpenSans-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
@@ -50,7 +48,6 @@ body {
   font-size: 1rem;
   line-height: 1.5rem;
   -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 
