--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,27 +6,14 @@ import { Icon } from 'astro-icon/components'
 
 <header>
   <SkipLinks />
-  <div class="m-2 border-2 border-t-zinc-200">
   <Navigation>
-    <!-- <li class="menu-item">
+    <li class="menu-item">
       <a href="/">Home</a>
-    </li> -->
-    <li class="menu-item">
-      <a href="/about/">About</a>
     </li>
     <li class="menu-item">
-      <a href="/contact/">Contact</a>
-    </li>
-    <li class="menu-item">
-      <a href="/search/">Search</a>
-    </li>
-    <li class="menu-item">
-      <a href="/email/">Email</a>
-    </li>
-    <!-- <li class="menu-item">
       <a href="/blog/">Blog</a>
-    </li> -->
-    <!-- <li class="menu-item has-dropdown">
+    </li>
+    <li class="menu-item has-dropdown">
       <button aria-haspopup="true" aria-expanded="false">Example Pages</button>
       <ul class="dropdown-menu">
         <li class="submenu-item">
@@ -39,16 +26,15 @@ import { Icon } from 'astro-icon/components'
           <a href="/accessible-components">Accessible Components</a>
         </li>
       </ul>
-    </li> -->
-    <!-- <li class="menu-item">
+    </li>
+    <li class="menu-item">
       <a href="https://accessible-astro.dev" title="external link" rel="external noopener noreferrer">External Link</a>
-    </li> -->
-    <!-- <li class="menu-item type-icon">
+    </li>
+    <li class="menu-item type-icon">
       <a href="https://github.com/markteekman/accessible-astro-starter" title="Go to the GitHub page">
         <Icon name="ion:logo-github" />
       </a>
-    </li> -->
-  </div>
+    </li>
   </Navigation>
 </header>
 
