--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,13 +1,13 @@
 ---
-import TopLayout from './TopLayout.astro'
+import DefaultLayout from './DefaultLayout.astro'
 
 const { frontmatter } = Astro.props
 ---
 
-<TopLayout title={frontmatter.title}>
+<DefaultLayout title={frontmatter.title}>
   <div class="container">
     <div class="space-content my-12">
       <slot />
     </div>
   </div>
-</TopLayout>
+</DefaultLayout>
