--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,8 @@
 ---
-import TopLayout from '../layouts/TopLayout.astro'
+import DefaultLayout from '../layouts/DefaultLayout.astro'
 ---
 
-<TopLayout title="404">
+<DefaultLayout title="404">
   <section class="my-12">
     <div class="container">
       <h1>404</h1>
@@ -11,7 +11,7 @@ import TopLayout from '../layouts/TopLayout.astro'
   <section class="my-12">
     <div class="space-content container">
       <p class="text-2xl">This page does not exist. Don't worry though, we got you.</p>
-      <a class="button" href="/">The BIG Home page awaits</a>
+      <a class="button" href="/">Let's get you home Astronout 🚀</a>
     </div>
   </section>
-</TopLayout>
+</DefaultLayout>
