--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -52,7 +52,7 @@ const {
         --font-color: var(--neutral-900);
         --action-color: var(--primary-300);
         --action-color-state: var(--primary-500);
-        --background: var(--neutral-100);
+        --background: var(--light-100);
         --primary-background: var(--primary-100);
         --neutral-background: var(--neutral-200);
       }
