--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import ContentMedia from '../components/ContentMedia.astro'
 ---
 
 <DefaultLayout title="Home">
-  <Hero />
+  <!-- <Hero /> -->
   <!-- <section class="my-64">
     <div class="container">
       <h2 class="mb-16 text-6xl">Features</h2>
