--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -4,6 +4,7 @@ import '../assets/scss/globals.scss'
 import SiteMeta from '../components/SiteMeta.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
+import NavCards from '../components/NavCards.astro'
 
 const {
   title = 'Astro',
@@ -34,11 +35,17 @@ const {
     />
   </head>
   <body>
+    <div class="grid grid-cols-2"> 
+    <div class="grid">  
     <Header />
     <main id="main-content" transition:animate="fade">
       <slot />
     </main>
     <Footer />
+  </div>
+  <NavCards/>
+</div>
+
     <style lang="scss" is:global>
       // theme settings
       :root {
