--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -38,9 +38,10 @@ const {
     <div class="grid grid-cols-2"> 
     <div class="grid">  
     <Header />
-    <main id="main-content" transition:animate="fade">
+    <!-- todo  fix animate gmw-->
+    <!-- <main id="main-content" transition:animate="fade"> -->
       <slot />
-    </main>
+    <!-- </main> -->
     <Footer />
   </div>
   <NavCards/>
