--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from '../components/Hero.astro'
 import Feature from '../components/Feature.astro'
 import Counter from '../components/Counter.astro'
 import ContentMedia from '../components/ContentMedia.astro'
+import FeaturedItemBar from '../components/FeaturedItemBar.astro'
 ---
 
 <DefaultLayout title="Home">
@@ -42,7 +43,7 @@ import ContentMedia from '../components/ContentMedia.astro'
       </div>
     </div>
   </section> -->
-  <ContentMedia imgSrc="/accessible-components.webp">
+  <!-- <ContentMedia imgSrc="/accessible-components.webp">
     <h2>Accessible Components</h2>
     <p class="text-2xl">
       This theme provides plenty of tried and tested Accessible Astro Components. Some are native to this theme and a
@@ -50,7 +51,8 @@ import ContentMedia from '../components/ContentMedia.astro'
         >separate package</a
       >. They'll get you up and running in building an accessible solution for your visitors.
     </p>
-  </ContentMedia>
+  </ContentMedia> -->
+  <FeaturedItemBar/>
   <!-- <ContentMedia imgSrc="/wcag-compliant.webp" reverseImg={true}>
     <h2>WCAG 2.1 AA Compliant</h2>
     <p class="text-2xl">
