--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,10 @@ import { Icon } from 'astro-icon/components'
   <SkipLinks />
   <Navigation>
     <li class="menu-item">
-      <a href="/">Home</a>
+      <a href="/contact/">Contact</a>
+    </li>
+    <li class="menu-item">
+      <a href="/about/">About</a>
     </li>
     <li class="menu-item">
       <a href="/blog/">Blog</a>
