--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,14 +30,14 @@ import { Icon } from 'astro-icon/components'
         </li>
       </ul>
     </li>
-    <li class="menu-item">
+    <!-- <li class="menu-item">
       <a href="https://accessible-astro.dev" title="external link" rel="external noopener noreferrer">External Link</a>
-    </li>
-    <li class="menu-item type-icon">
+    </li> -->
+    <!-- <li class="menu-item type-icon">
       <a href="https://github.com/markteekman/accessible-astro-starter" title="Go to the GitHub page">
         <Icon name="ion:logo-github" />
       </a>
-    </li>
+    </li> -->
   </Navigation>
 </header>
 
