--- a/src/components/FeaturedItemBar.astro
+++ b/src/components/FeaturedItemBar.astro
@@ -1,7 +1,7 @@
 ---
 import ContentMedia from './ContentMedia.astro'
 ---
-<ContentMedia  imgSrc="/IMG_20200809_201155.jpg" reverseImg={true}>
+<ContentMedia  imgSrc="/BeachTableSmall.webp" reverseImg={true}>
   <h2 class="px-4">Featured Item or Service</h2>
   <p class=" px-4 text-2xl">
 We are offering a 20% discount on <span class="text-orange-500"><a href="../Architect/Outdoor">OUTDOOR LIVING</a></span> for the Month of March 2024</p>
