--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,7 @@ import logo from '../assets/img/bigcorlogo.svg'
 ---
 
 <div id="main-navigation" class="is-desktop py-8">
-  <div class="container border-2 border-orange-500 rounded-md ">
+  <div class="container border-2 border-orange-500 rounded-lg ">
     <a href="/" class="flex items-center gap-2 !no-underline">
       <Image src={logo} alt="Logo" width="85" height="75" />
       <span class="font-bold m-4">BOREALIS Ingenuity Group <br>Corporation</span>
