--- a/src/components/NavCards.astro
+++ b/src/components/NavCards.astro
@@ -27,10 +27,9 @@ import Feature from "./Feature.astro"
         <Feature icon="mdi:construction-outline" title="This NavCard is Under Construction">
           Coming soon 
         </Feature>
-        <Feature icon="mdi:construction-outline" title="This NavCard is Under Construction">
-          Coming soon 
-        <!-- </Feature>
-        <Feature icon="mdi:book-open-page-variant" title="Blog">
+        <Feature>             
+        </Feature>
+        <!-- <Feature icon="mdi:book-open-page-variant" title="Blog">
           This theme comes with a fully integrated blog, dynamic pages and SEO optimization.
         </Feature>
         <Feature icon="mdi:language-markdown" title="Markdown & MDX">
@@ -45,6 +44,5 @@ import Feature from "./Feature.astro"
         <Feature icon="mdi:lighthouse" title="Lighthouse Scores">
           Excellent lighthouse scores means your website will load faster and get better SEO rankings.
         </Feature> -->
-      </div>
     </div>
   </section>
