--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -39,9 +39,9 @@ const {
     <div class="grid">  
     <Header />
     <!-- todo  fix animate gmw-->
-    <!-- <main id="main-content" transition:animate="fade"> -->
+    <main id="main-content" transition:animate="fade">
       <slot />
-    <!-- </main> -->
+    </main>
     <Footer />
   </div>
   <NavCards/>
