--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -36,10 +36,10 @@ const {
   </head>
   <body>
     <div class="grid grid-cols-2"> 
-    <div class="grid">  
+    <div class="grid grid-row-3 h-screen">  
     <Header />
     <!-- todo  fix animate gmw-->
-    <main id="main-content" transition:animate="fade">
+    <main id="main-content" transition:animate="fade" class="scroll-auto">
       <slot />
     </main>
     <Footer />
@@ -79,17 +79,18 @@ const {
       html,
       body {
         height: 100%;
-        overflow-x: hidden;
+        // overflow-x: hidden;
       }
 
       body {
-        display: flex;
-        flex-direction: column;
+        // display: flex;
+        // flex-direction: column;
         color: var(--font-color);
         background-color: var(--background);
 
         main {
           flex: 1 0 auto;
+          overflow-y: scroll;
         }
 
         footer {
