--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const currentYear = new Date().getFullYear()
 
 <footer>
   <!-- <CallToAction /> -->
-  <section class="py-8">
+  <!-- <section class="py-8"> -->
     <div class="container">
       <p>
         &copy; {currentYear} - BIGCOR  website made with <a href="https://astro.build/"target="_blank" rel="noopener noreferrer">Astro</a>
@@ -14,5 +14,5 @@ const currentYear = new Date().getFullYear()
         <br> Awesome Template by <a href="https://github.com/markteekman"target="_blank" rel="noopener noreferrer">Mark Teekman</a>. with our thanks
       </p>
     </div>
-  </section>
+  <!-- </section> -->
 </footer>
