--- a/src/components/NavCards.astro
+++ b/src/components/NavCards.astro
@@ -1,5 +1,6 @@
 ---
 import Feature from "./Feature.astro"
+import Border from './Border.astro'
 import {Card,} from 'accessible-astro-components'
 ---
 
@@ -30,7 +31,10 @@ import {Card,} from 'accessible-astro-components'
         </Feature>
         <Feature>             
         </Feature>
-        <Card img="https://images.unsplash.com/photo-1636819488524-1f019c4e1c44?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"/>
+        <Border>        
+         <Card img="https://images.unsplash.com/photo-1636819488524-1f019c4e1c44?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"/>
+        </Border>
+      
         <!-- <Feature icon="mdi:book-open-page-variant" title="Blog">
           This theme comes with a fully integrated blog, dynamic pages and SEO optimization.
         </Feature>
