--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -5,6 +5,7 @@ import SiteMeta from '../components/SiteMeta.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import NavCards from '../components/NavCards.astro'
+import Border from '../components/Border.astro'
 
 const {
   title = 'Astro',
@@ -35,14 +36,19 @@ const {
     />
   </head>
   <body>
-    <div class="grid grid-cols-2"> 
-    <div class="grid grid-row-3 h-screen">  
-    <Header />
+    <div class="grid grid-cols-2 gap-2 px-2"> 
+    <div class="grid grid-row-3 h-screen">
+    <Border> 
+      <Header />
+    </Border> 
     <!-- todo  fix animate gmw-->
     <main id="main-content" transition:animate="fade">
       <slot />
     </main>
-    <Footer />
+    <Border>
+      <Footer />
+    </Border>
+  
   </div>
   <NavCards/>
 </div>
