--- a/src/components/Border.astro
+++ b/src/components/Border.astro
@@ -15,7 +15,7 @@
     .feature {
       position: relative;
       width: calc(100% - 0.5rem);
-      padding: 2rem;
+      padding: .75rem;
   
       > * {
         position: relative;
