--- a/src/components/NavCards.astro
+++ b/src/components/NavCards.astro
@@ -4,7 +4,7 @@ import Border from './Border.astro'
 import {Card,} from 'accessible-astro-components'
 ---
 
-<section class="my-12">
+<section>
     <div class="container">
       <!-- <h2 class="mb-16 text-6xl">NAVCARDS</h2> -->
       <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
