--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -15,7 +15,7 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('/fonts/OpenSans-Bold.woff2') format('woff2'),
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('/fonts/HandelGotDBol.woff2') format('woff2'),
     url('/fonts/OpenSans-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
