--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -36,8 +36,8 @@ const {
     />
   </head>
   <body>
-    <div class="grid grid-cols-2 h-screen gap-2 p-2"> 
-    <div class="grid grid-row-3">
+    <div class="grid grid-cols-2 gap-2 p-2"> 
+    <div class="grid grid-row-3 h-screen">
     <Border> 
       <Header />
     </Border> 
@@ -83,7 +83,8 @@ const {
       // sticky footer on low content pages
       html,
       body {
-        // height: 100%;
+        box-sizing: border-box;
+        height: 90vh;
         // overflow-x: hidden; SCROLL BOX GMW
       }
 
