--- a/src/components/Border.astro
+++ b/src/components/Border.astro
@@ -34,10 +34,10 @@
   
       &::before {
         inset: 0;
-        background-color: var(--neutral-100);
+        background-color: var(--light-100);
         border: 3px solid var(--neutral-700);
         border-radius: 1rem;
-        box-shadow: 0 0 0 6px var(--neutral-100);
+        box-shadow: 0 0 0 6px var(--light-100);
         z-index: 1;
       }
   
