--- a/src/components/NavCards.astro
+++ b/src/components/NavCards.astro
@@ -1,7 +1,7 @@
 ---
 import Feature from "./Feature.astro"
 import Border from './Border.astro'
-import {Card,} from 'accessible-astro-components'
+import {Card} from 'accessible-astro-components'
 ---
 
 <section>
