--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -50,7 +50,9 @@ const {
   
   </div>
   <NavCards/>
-</div>
+</div>  
+</body>
+</html>
 
     <style lang="scss" is:global>
       // theme settings
@@ -95,20 +97,20 @@ const {
         background-color: var(--background);
 
         main {
-          flex: 1 0 auto;
+          // flex: 1 0 auto;
           overflow-y: auto;/* SCROLL BOX GMW */
         }
 
-        footer {
-          flex-shrink: 0;
-        }
+        // footer {
+        //   flex-shrink: 0;
+        // }
       }
 
-      pre {
-        padding: 1rem;
-        border-radius: 0.35rem;
-        border: 2px solid var(--action-color);
-      }
+      // pre {
+      //   padding: 1rem;
+      //   border-radius: 0.35rem;
+      //   border: 2px solid var(--action-color);
+      // }
 
       body .pagination a {
         &:hover,
@@ -121,5 +123,4 @@ const {
         }
       }
     </style>
-  </body>
-</html>
+
