--- a/src/components/ContentMedia.astro
+++ b/src/components/ContentMedia.astro
@@ -1,12 +1,14 @@
 ---
 import { Media } from 'accessible-astro-components'
+import Border from './Border.astro'
 
 const { imgSrc, reverseImg = false } = Astro.props
 ---
 
-<section class="my-8">
-  <div class="container">
-    <div class="grid grid-cols-1 gap-24 md:grid-cols-2">
+
+<section class="m-8">
+    <div class="container">
+    <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
       {!reverseImg ? <Media class="rounded-lg" src={imgSrc} /> : ''}
       <div class="space-content flex flex-col justify-center">
         <slot />
