--- a/src/components/Border.astro
+++ b/src/components/Border.astro
@@ -15,6 +15,7 @@
     .feature {
       position: relative;
       width: calc(100% - 0.5rem);
+      height: fit-content;
       padding: .75rem;
   
       > * {
