--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -36,7 +36,7 @@ const {
     />
   </head>
   <body>
-    <div class="grid grid-cols-2 gap-2 p-2"> 
+    <div class="grid grid-cols-2 gap-2 "> 
     <div class="grid grid-row-3 h-screen">
     <Border>  
       <Header />
@@ -47,7 +47,6 @@ const {
     <Border>
       <Footer />
     </Border>
-  
   </div>
   <NavCards/>
 </div>  
