--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -38,15 +38,15 @@ const {
   <body>
     <div class="grid grid-cols-2 gap-2 "> 
     <div class="grid grid-row-3 h-screen">
-    <Border>  
+    <!-- <Border>   -->
       <Header />
-    </Border> 
+    <!-- </Border>  -->
     <main id="main-content" transition:animate="fade">
       <slot />
     </main>
-    <Border>
+    <!-- <Border> -->
       <Footer />
-    </Border>
+    <!-- </Border> -->
   </div>
   <NavCards/>
 </div>  
